# multimodal-multiagent-AI-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/agents/: __init__.py  analyst_agent.py  answer_agent.py  checkpoint_store.py  context_manager.py  loop_controller.py  (+4 more)
deployment/: docker-compose.ollama.yml  docker-compose.qdrant.yml
docs/: 01-requirements.md  02-implementation-roadmap.md  03-didactic-traceability.md  04-file-traceability-by-milestone.md  05-progress-log-handoff.md  06-qdrant-local-setup.md  07-local-model-backends.md  08-multimodal-research-and-m41.md  09-video-understanding-techniques-landscape.md  10-qwen3-vl-multimodal-embedding-stack.md  11-live-status-and-loop-orchestration-plan.md  12-chat-persistence-and-runtime-reasoning-plan.md  13-lead-genai-architecture-concepts.md
frontend/: __init__.py  architecture.py  streamlit_app.py
tests/: test_api_contracts.py  test_frontend_architecture.py  test_frontend_source_previews.py  test_llm_and_multimodal_ingestion.py  test_m1_rag.py  test_m23_runtime_events.py  test_m24_chat_memory.py  test_m24_chat_scoped_retrieval.py  test_m24_chat_sessions.py  test_m24_runtime_transcript.py  test_m2_agents.py  test_m2_checkpoint_resume.py  test_m3_vision.py  test_m4_video.py  test_m51_context_compaction.py  test_m52_steering.py  test_m53_multimodal_stack.py  test_m53_openai_reranker.py  test_m53_true_vl_clients.py  test_multimodal_vision_adapters.py  test_qdrant_live_integration.py  test_query_error_handling.py  test_tools_builtin.py  test_vector_store_fallback.py
(+62 files in other folders)
